--- a/pages/signUp/index.wxml
+++ b/pages/signUp/index.wxml
@@ -20,20 +20,22 @@
         </view>
 
         <van-cell-group>
-            <van-field size="large" required label="报名人" data-key="name" value="{{ form.name }}" placeholder="请输入" bind:change="onChange" />
-            <van-field size="large" required label="联系方式" data-key="name" value="{{ form.name }}" placeholder="请输入" bind:change="onChange" />
-            <van-field size="large" required label="出生年月日" data-key="name" value="{{ form.name }}" placeholder="请输入" bind:change="onChange" />
-            <van-field size="large" required label="身份证号码" data-key="name" value="{{ form.name }}" placeholder="请输入" bind:change="onChange" />
-            <van-field size="large" required label="指导老师" data-key="name" value="{{ form.name }}" placeholder="请输入" bind:change="onChange" />
+            <van-field size="large" required label="报名人" data-key="form.signup_name" value="{{ form.signup_name }}" placeholder="请输入" bind:change="onChange" />
+            <van-field size="large" required label="性别" data-key="form.user_sex" value="{{ form.user_sex }}" placeholder="请输入" bind:change="onChange" />
+            <van-field size="large" required label="联系方式" data-key="form.phone" value="{{ form.phone }}" placeholder="请输入" bind:change="onChange" />
+            <van-field size="large" required label="出生年月日" data-key="form.birthday" value="{{ form.birthday }}" placeholder="请输入" bind:change="onChange" />
+            <van-field size="large" required label="身份证号码" data-key="form.peopleid" value="{{ form.peopleid }}" placeholder="请输入" bind:change="onChange" />
+            <van-field size="large" required label="监护人" data-key="form.guardian" value="{{ form.guardian }}" placeholder="请输入" bind:change="onChange" />
         </van-cell-group>
 
         <van-cell-group>
-            <van-field size="large" required label="监护人" data-key="name" value="{{ form.name }}" placeholder="请输入" bind:change="onChange" />
-            <van-field size="large" required label="联系方式" data-key="name" value="{{ form.name }}" placeholder="请输入" bind:change="onChange" />
+            <van-field size="large" required label="指导老师" data-key="form.instructor" value="{{ form.instructor }}" placeholder="请输入" bind:change="onChange" />
+            <van-field size="large" required label="联系方式" data-key="form.instructor_phone" value="{{ form.instructor_phone }}" placeholder="请输入" bind:change="onChange" />
+            <van-field size="large" required label="报名组别" data-key="form.group_id" value="{{ form.group_id }}" placeholder="请输入" bind:change="onChange" />
         </van-cell-group>
 
         <van-cell-group>
-            <view wx:for="{{form.music}}">
+            <view wx:for="{{form.songlist}}">
                 <van-cell>
                     <text slot="title" class="text-black text-bold text-lg">参赛曲目{{index+1}}</text>
                     <view slot="right-icon">
@@ -45,14 +47,14 @@
                         </view>
                     </view>
                 </van-cell>
-                <van-field size="large" required label="名称" data-key="form.music[{{index}}].name" value="{{ item.name }}" placeholder="请输入" bind:change="onChange" />
-                <van-field size="large" required label="作者" data-key="form.music[{{index}}].person" value="{{ item.person }}" placeholder="请输入" bind:change="onChange" />
-                <van-field size="large" required label="出处" data-key="form.music[{{index}}].region" value="{{ item.region }}" placeholder="请输入" bind:change="onChange" />
+                <van-field size="large" required label="曲目名称" data-key="form.songlist[{{index}}].song" value="{{ item.song }}" placeholder="请输入" bind:change="onChange" />
+                <van-field size="large" required label="作品号/序号" data-key="form.songlist[{{index}}].song_number" value="{{ item.song_number }}" placeholder="请输入" bind:change="onChange" />
+                <van-field size="large" required label="作者" data-key="form.songlist[{{index}}].song_authod" value="{{ item.song_authod }}" placeholder="请输入" bind:change="onChange" />
             </view>
         </van-cell-group>
     </scroll-view>
     
     <view class="padding flex flex-direction">
-        <button class="submit-btn cu-btn bg-cyan lg" bindtap="signUp">立即付费</button>
+        <button class="submit-btn cu-btn bg-cyan lg" bindtap="submit">立即付费</button>
     </view>
 </view>
