--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -3,16 +3,12 @@
   <view class="main-content">
     <view wx:for="{{list}}" class="item bg-img">
       <image src="{{item.banner_url}}" class="cover"/>
-      <view class='cu-tag bg-orange' wx:if="{{item.indextype == 1}}">比赛</view>
-      <view class='cu-tag bg-blue' wx:else>培训</view>
-			<view class="text-white bg-shadeBottom message">
-				<view class="text-xl text-bold">
-					{{item.title}}
-				</view>
-				<view class="text-df flex flex-wrap justify-between align-center">
-          <text>{{item.activity_time}}</text>
-          <button class="cu-btn round sm" data-id="{{item.indextype == 1 ? item.examination_id : item.train_id}}" data-type="{{item.indextype}}" bindtap="signUp">我要报名</button>
-        </view>
+      <view class="text-white bg-shadeTop time">
+        <text>{{item.activity_time}}</text>
+      </view>
+			<view class="text-white bg-shadeBottom message flex flex-wrap justify-between align-center">
+				<view class="title">{{item.title}}</view>
+        <button class="cu-btn round sm" data-id="{{item.indextype == 1 ? item.examination_id : item.train_id}}" data-type="{{item.indextype}}" bindtap="signUp">我要报名</button>
 			</view>
 		</view>
   </view>
