--- a/pages/activityDetails/index.wxss
+++ b/pages/activityDetails/index.wxss
@@ -2,29 +2,42 @@ page{
     background: #fff;
 }
 
-.buy-btn{
-    width:240rpx;
-    text-align: center;
-    padding: 6rpx;
-    border-radius: 10rpx;
-}
-
 .buy-item{
     padding: 20rpx 30rpx;
-    margin-bottom: 20rpx;
+    margin: 20rpx;
+    background: #FFF9F6;
+    color: #FE5D21;
+    font-size: 28rpx;
 }
-.buy-item .text{
-    margin-right: 20rpx;
-    font-size: 14px;
-    flex: 1;
+.buy-item .mes{
+  margin-right: 10rpx;
+  font-size: 28rpx;
+  flex: 1;
+  border-right: 1px solid #FE5D21;
+  color: #000000;
+}
+.buy-item .title{
+  color:#000000;
+  font-size: 32rpx;
+  font-weight: bold;
+  margin-bottom: 4rpx;
 }
 .buy-item .original-price{
     text-decoration: line-through;
     font-size: 13px;
 }
+.buy-btn{
+    width:160rpx;
+    font-size: 28rpx;
+    color: #FE5D21;
+    text-align: right;
+}
+
 .buy-item .active-price{
-    font-size: 14px;
-    color: #353535;
+    font-size: 42rpx;
+}
+.buy-item .active-price text{
+  font-size: 26rpx;
 }
 
 
@@ -52,9 +65,11 @@ page{
   
   .item{
     position: relative;
-    /* background-image: url('https://ossweb-img.qq.com/images/lol/web201310/skin/big10006.jpg'); */
-    background-color: #fff;
-    height: 340rpx;
+    margin: 20rpx;
+    border-radius: 20rpx;
+    overflow: hidden;
+    background-color: #303030;
+    height: 318rpx;
     overflow: hidden;
   }
   .item .cover{
@@ -68,6 +83,12 @@ page{
     left: 0;
     width: 100%;
     padding: 20rpx;
+    color: #fff;
+    font-size:26rpx;
+  }
+  .message .title{
+    font-size: 32rpx;
+    font-weight: bold;
   }
   
   .item .cu-tag{
@@ -82,9 +103,17 @@ page{
   }
 
   .details{
-      border-bottom: 1px solid #eee;
+      color: #1E1E1E;
+      font-size: 28rpx;
   }
 
   checkbox{
     margin-right: 20rpx;
+  }
+
+
+  .check-icon{
+    margin-right: 20rpx;
+    width: 40rpx;
+    height: 40rpx;
   }
