--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,30 +1,13 @@
-.messsage{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.messsage .title{
-  font-size: 20px;
-  color: #000;
-  flex: 1;
-}
-
-.messsage button{
-  width: 180rpx !important;
-}
 
 .cu-card>.cu-item{
   margin-top: 0 !important;
 }
 
-
 .item{
   margin: 30rpx;
   position: relative;
-  /* background-image: url('https://ossweb-img.qq.com/images/lol/web201310/skin/big10006.jpg'); */
-  background-color: #fff;
-  height: 340rpx;
+  background-color: #303030;
+  height: 320rpx;
   border-radius: 10rpx;
   overflow: hidden;
 }
@@ -40,6 +23,12 @@
   width: 100%;
   padding: 20rpx;
 }
+.time{
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 20rpx;
+}
 
 .item .cu-tag{
   position: absolute;
@@ -48,6 +37,15 @@
 
 .item .cu-btn{
   margin: 0;
-  font-size: 13px;
-  width:160rpx;
+  font-size: 32rpx;
+  width: 200rpx;
+  height: 60rpx;
+  background: linear-gradient(180deg, #4299FC 0%, #0364E5 100%);
+  color: #fff;
+}
+
+.item .title{
+  font-weight: bold;
+  font-size: 32rpx;
+  flex: 1;
 }
