--- a/pages/person/index.wxml
+++ b/pages/person/index.wxml
@@ -3,7 +3,7 @@
         <view class="bg-white padding flex align-center" style="margin-bottom: 20rpx">
             <view class="cu-avatar margin-right lg" style="background-image:url(https://ossweb-img.qq.com/images/lol/web201310/skin/big81005.jpg);"></view>
             <view>
-                <view class="text-lg text-bold text-black padding-bottom-xs">小花花</view>
+                <view class="text-lg text-bold text-black padding-bottom-sm">小花花</view>
                 <view class=" text-black">联系方式：13650964250</view>
             </view>
         </view>
