--- a/pages/resultSearch/index.wxml
+++ b/pages/resultSearch/index.wxml
@@ -1,33 +1,34 @@
-<view class="padding flex flex-direction bg-white margin-bottom-sm">
-    <input type="idcard" placeholder="请输入身份证" class="input"/>
-    <button class="submit-btn cu-btn lg" bindtap="signUp">查 找</button>
+<view class="padding flex flex-direction align-center bg-white margin-bottom-sm">
+    <view class="title">身份证号码</view>
+    <input type="idcard" placeholder="请输入需要查询的身份证号码" class="input"/>
+    <button class="submit-btn cu-btn lg" bindtap="signUp">确认</button>
+</view>
+
+<view class="nores-tips">
+    <image src="../../image/nres.png" />
+    <view>找不到你的成绩/比赛记录哦！</view>
+    <view>快去报名参加你喜欢的项目/比赛吧！</view>
 </view>
 
 <view class="cu-bar bg-white">
-    <view class="action">
-        <text class="cuIcon-title text-cyan"></text>
-        <text class="text-bold">我的成绩</text>
-    </view>
+    <view class="part-title">我的成绩</view>
 </view>
 <view class="bg-white">
     <view wx:for="{{[1,2,3]}}" class="match-item">
-        <view class="text-lg text-black text-bold">2020秋季全国钢琴大赛</view>
-        <view><text class="cuIcon-location"></text> 比赛地区：广州赛区</view>
-        <view><text class="cuIcon-selection"></text> 比赛成绩：一等奖</view>
+        <view class="name">2020秋季全国钢琴大赛</view>
+        <view>一等奖</view>
     </view>
 </view>
 
 <view class="cu-bar bg-white" style="margin-top: 30rpx">
-    <view class="action">
-        <text class="cuIcon-title text-cyan"></text>
-        <text class="text-bold">我的比赛</text>
-    </view>
+    <view class="part-title">我的比赛</view>
 </view>
 <view class="bg-white">
     <view wx:for="{{[1,2,3]}}" class="match-item">
-        <view class="text-lg text-black text-bold">2020秋季全国钢琴大赛</view>
+        <view class="name">2020秋季全国钢琴大赛</view>
+        <view>2020-10-10 10:00</view>
         <view><text class="cuIcon-location"></text> 比赛地区：广州赛区</view>
-        <view><text class="cuIcon-time"></text> 比赛时间：2020-10-10 10:00</view>
+        <view><text class="cuIcon-time"></text> 比赛时间：</view>
         <view><text class="cuIcon-vipcard"></text> 准考证号：354523134141423</view>
     </view>
 </view>
