--- a/pages/resultSearch/index.wxss
+++ b/pages/resultSearch/index.wxss
@@ -1,9 +1,16 @@
+.title{
+  font-size: 36rpx;
+  color: #1F1C17;
+  font-weight: bold;  
+  text-align: center;
+}
+
 .input{
     width: 100%;
-    height: 80rpx;
-    line-height: 80rpx;
+    height: 120rpx;
+    line-height: 120rpx;
     text-align: center;
-    border: 1px solid #ddd;
+    border-bottom: 1px solid #eee;
     margin-bottom: 30rpx;
     font-size: 16px;
 }
@@ -12,4 +19,28 @@
     padding: 30rpx;
     border-top: 1px solid #eee;
     line-height: 1.8;
+    color: #A5A5A5;
+    font-size: 32rpx;
+    display: flex;
+    align-items: center;
+    padding: 30rpx 60rpx;
+}
+.match-item .name{
+    color: #1E1E1E;
+    flex: 1;
+}
+
+.submit-btn{
+    background: #fff !important;
+    color: #3A7FE2 !important;
+    border: 1px solid #3A7FE2 !important;
+    width: 360rpx !important;
+    margin: 0 auto;
+}
+
+.part-title{
+    color: #1E1E1E;
+    font-size: 32rpx;
+    font-weight: bold;
+    padding-left: 30rpx;
 }
